# 396H-Project

./: .gitignore  README.md  requirements.txt
data/finished/subreddits/: readme.md
data/finished/users/: readme.md
papers/: intermediate_report.tex  proposal.tex  refs.bib
papers/final/: final.tex
papers/proposal/: proposal.tex
proposal/: proposal.tex  refs.bib
src/: api.ipynb  api.py  processData.py
src/classifier/: apply_classifier.py  auth_per_text.csv  auth_per_trigram.csv  db_to_csv.py  stats.ipynb  test_file.csv
src/classifier/graphing/: create_bar.py  scatter.sh  sub_time.sh  users.py  util.py  violin.py
src/processing/: CMakeLists.txt  CMakePresets.json  database.py  definitions.py  pyproject.toml  reader.py
src/processing/data_processing.egg-info/: SOURCES.txt
src/processing/include/: database.hpp  reader.hpp  timing.hpp  types.hpp
src/processing/lib/SQLiteCpp/: CMakeLists.txt
src/processing/lib/SQLiteCpp/include/: Database.h
src/processing/lib/SQLiteCpp/src/: Backup.cpp  Column.cpp  Database.cpp  Exception.cpp  Savepoint.cpp  Statement.cpp  Transaction.cpp
src/processing/lib/sqlite3/: CMakeLists.txt
src/processing/lib/zstd/: CMakeLists.txt
src/processing/src/: main.cpp
src/processing/src/include/: comments.hpp  common.hpp  submissions.hpp  wrapper.hpp
src/python/: processData.py
src/python/processing/: database.py  reader.py
src/python/processing/data_processing.egg-info/: PKG-INFO
